--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <header class="w-100 pa3 ph5-ns bg-white">
             <div class="db dt-ns mw9 center w-100">
                 <div class="db dtc-ns v-mid tl w-50">
-                    <a href="/" class="dib f5 f4-ns fw6 mt0 mb1 link black-70">
+                    <a href="index.html" class="dib f5 f4-ns fw6 mt0 mb1 link black-70">
                         Space Wonders 
                     </a>
                 </div>
@@ -15,10 +15,10 @@
                     <a href="#" id="descLink" class="f6 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dib">
                         What am I looking at?
                     </a>
-                    <a href="/random.html" class="f6 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dib">
+                    <a href="random.html" class="f6 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dib">
                         Random Wonder
                     </a>
-                    <a href="/about.html" class="f6 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dib">
+                    <a href="about.html" class="f6 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dib">
                         About
                     </a>
                     <a href="https://github.com/Heyfara/space-wonders/" class="f6 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dib">
